// Copyright 2023 Intrinsic Innovation LLC

syntax = "proto3";

package intrinsic_proto.perception;

import "intrinsic/math/proto/pose.proto";
import "intrinsic/perception/proto/camera_params.proto";

// Specification of a single sensor within a camera. This includes intrinsic
// calibration (including distortion params), per-sensor settings, and sensor
// pose relative to the device coordinate system. Minimal specification includes
// sensor ID only.
message SensorConfig {
  reserved 3, 4;
  reserved "intrinsic_params", "distortion_params";

  // SourceIDValue for Genicam, sensor number for other cameras (e.g. IPS PU)
  int64 id = 1;
  // Transforms the sensor data into the reference coordinate system of the
  // camera.
  optional intrinsic_proto.Pose camera_t_sensor = 2;
  // Sensor camera parameters.
  optional CameraParams camera_params = 6;
}

message SensorConfigs {
  repeated SensorConfig sensor_configs = 1;
}
